--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 :root {
-    --background-color: #fffdf6;
+    --background-color: #ecede8;
     --dark-color: #2E383F;
     --middle-color: #0474BA;
     --highlight-one: #F9A828;
